--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,39 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    background: linear-gradient(90deg, rgba(109, 159, 237, 1) 0%, rgba(88, 205, 236, 1) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ffff;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.wrapper{
+    width: 400px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 5px;
+}
+
+.btn{
+    border: 0;
+    background-color: #ffff;
+    width: 100px;
+    height: 40px;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 5px;
+    border-radius: 20px;
+}
+
+.description{
+    margin-top: 40px;
+}
